--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <body>
 
+//search Box---------------------------
         <form id="search-form">
             <input type="search"
             placeholder="Enter City Name"
@@ -17,8 +18,8 @@
             />
             <br>
         </br>
+       //Search Button------------------------------------
         <button id="search-button">Search</button>
-
         </form>
 
 
@@ -33,32 +34,8 @@
 
                 <div id="climate">
                     <p>------</p>
-                </div>
-
-
-
-
-
+                </div> 
         </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <script src="script.js">
 
 </script>
