--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
 
-//search Box---------------------------
+<!-- //search Box--------------------------- -->
         <form id="search-form">
             <input type="search"
             placeholder="Enter City Name"
@@ -18,7 +18,7 @@
             />
             <br>
         </br>
-       //Search Button------------------------------------
+<!--        //Search Button------------------------------------ -->
         <button id="search-button">Search</button>
         </form>
 
